Colaboratory를 통해 생성됨 - NumPy 자료구조 : ndarray의 생성

--- a/Class3.ipynb
+++ b/Class3.ipynb
@@ -6,7 +6,7 @@
       "name": "Class3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNDj7x7UWb58U7fAxb5yr9o",
+      "authorship_tag": "ABX9TyPxKlJczbKKCd/HoxIL1Dyo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -598,9 +598,493 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "88ZcwiEHUpDh"
+      },
+      "source": [
+        "### NumPy 자료구조 : ndarray의 생성"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TfiEVSyaUr8c"
+      },
+      "source": [
+        "#### NumPy.array()\n",
+        "\n",
+        "np.array(object,dtype)\n",
+        "- 입력된 데이터(object)를 인자로 받아 ndarray를 생성하는 함수\n",
+        "- Parameters : \n",
+        "  - object : ndarray에 저장할 데이터 \n",
+        "  - dtype : 배열의 데이터 타입, 기본 값은 None, 생략가능"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Yj4wJHoPU407"
+      },
+      "source": [
+        "#### ndarray 의 생성\n",
+        "- np.arange()\n",
+        "- np.zeros()\n",
+        "- np.ones()\n",
+        "- np.full()\n",
+        "- np.empty()\n",
+        "- ..."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mivbkKWUVEXS"
+      },
+      "source": [
+        "#### NumPy.arange()\n",
+        "\n",
+        "np.arange((start), stop, (step))\n",
+        "\n",
+        "- 파이썬의 range()와 동일하게 연속된 데이터를 생성하는 함수\n",
+        "\n",
+        "range((start), stop, (step))\n",
+        "\n",
+        "range(1,5)\n",
+        "\n",
+        "range(1, 5, 2)\n",
+        "\n",
+        "range(5.0)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pRWqMuAZVXVV"
+      },
+      "source": [
+        "- Parameters : \n",
+        "  - start : 생성할 시작 값으로 생략 가능함. 생략되면 0부터 생성됨.\n",
+        "  - stop : 생성되는 마지막 값으로 해당 값은 포함되지 않음.\n",
+        "  - step : 생성시 값들의 간격, 생략 가능"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mw6M4RvdVj1Y"
+      },
+      "source": [
+        "- np.arange()를 통한 ndarray 생성하기"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "jerXJ7veUcNb"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jerXJ7veUcNb",
+        "outputId": "386ac081-43e3-4a88-c779-4e805445144f"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def printinfo(arr):\n",
+        "  print(arr)\n",
+        "  print(\"shape: {}, size: {}, dtype: {}, dimension: {}\".format(arr.shape, arr.size, arr.dtype, arr.ndim))\n",
+        "\n",
+        "#np.arange()를 통한 ndarray 생성\n",
+        "arr = np.arange(2, 10)\n",
+        "print('\\n Create ndarray by np.arange()')\n",
+        "printinfo(arr)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            " Create ndarray by np.arange()\n",
+            "[2 3 4 5 6 7 8 9]\n",
+            "shape: (8,), size: 8, dtype: int64, dimension: 1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BFvZiuSPWtC_"
+      },
+      "source": [
+        "#### ndarray의 생성\n",
+        "- np.arange()\n",
+        "- np.zeros()\n",
+        "- np.ones()\n",
+        "- np.full()\n",
+        "- np.empty()\n",
+        "- ..."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yEo7xTzSV8mB"
+      },
+      "source": [
+        "#### NumPy.zeros()\n",
+        "\n",
+        "np.zeros(shape, dtype = float)\n",
+        "\n",
+        "- 지정된 크기(shape)만큼 배열을 생성하고, 모든 요소를 0으로 초기화\n",
+        "- 데이터 타입(dtype)은 입력하지 않으면 기본 float 타입으로 생성됨\n",
+        "- Parameters : \n",
+        "  - shape : 생성할 ndarray의 크기로 튜플() 형태로 저장해야 함\n",
+        "  - dtype : 배열의 데이터 타입, 기본값은 float, 생략가능"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7ZNyFqtqWPPD"
+      },
+      "source": [
+        "- np.zeros()를 통한 ndarray 생성하기 (1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ku9BqZVMVtEo",
+        "outputId": "6325c94b-5111-4e50-d0ce-a66e0e7de64b"
+      },
+      "source": [
+        "# np.zeros() 를 통한 ndarray 생성\n",
+        "arr = np.zeros(5)\n",
+        "print('\\n Create ndarray by np.zeros()')\n",
+        "printinfo(arr)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            " Create ndarray by np.zeros()\n",
+            "[0. 0. 0. 0. 0.]\n",
+            "shape: (5,), size: 5, dtype: float64, dimension: 1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2_oyUsYFWa-i"
+      },
+      "source": [
+        "- np.zeros() 를 통한 ndarray 생성하기 (2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ISxnMrqjWZzx",
+        "outputId": "4721fa6f-76ca-4ec9-ad5a-42616772c3b5"
+      },
+      "source": [
+        "# np.zeros() 를 통한 ndarray 생성\n",
+        "arr = np.zeros((3,4), dtype=int)\n",
+        "print('\\n Create ndarray by np.zeros()')\n",
+        "printinfo(arr)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            " Create ndarray by np.zeros()\n",
+            "[[0 0 0 0]\n",
+            " [0 0 0 0]\n",
+            " [0 0 0 0]]\n",
+            "shape: (3, 4), size: 12, dtype: int64, dimension: 2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t8C1ppI2W0u0"
+      },
+      "source": [
+        "#### ndarray의 생성\n",
+        "- np.zeros(shape, dtype = float)\n",
+        "  - 지정된 크기 (shape) 만큼 배열을 생성하고, 모든 요소를 0으로 초기화\n",
+        "- np.ones(shape, dtype=float)\n",
+        "- np.full(shape, fill_value, dtype = None)\n",
+        "- np.empty()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uV__ODCsXEwb"
+      },
+      "source": [
+        "#### NumPy.ones()\n",
+        "\n",
+        "np.ones(shape, dtype = float)\n",
+        "- 지정된 크기(shape)의 배열을 생성하고, 모든 요소를 1로 초기화"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "apHmSFcpWkUr",
+        "outputId": "dd5d5cb4-3791-4a14-f204-270fba5e936b"
+      },
+      "source": [
+        "# np.ones()를 통한 ndarray 생성\n",
+        "arr = np.ones((3,4))\n",
+        "print('\\n Create ndarray by np.ones()')\n",
+        "printinfo(arr)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            " Create ndarray by np.ones()\n",
+            "[[1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1.]]\n",
+            "shape: (3, 4), size: 12, dtype: float64, dimension: 2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c4tDFeZyXU_x"
+      },
+      "source": [
+        "#### NumPy.full()\n",
+        "\n",
+        "np.full(shape, fill_value, dtype=None)\n",
+        "- 지정된 크기(shape)의 배열을 생성하고, 모든 요소를 'fill_value'로 초기화"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fBND_7S3XT1x",
+        "outputId": "ac803596-c93d-4aff-f53b-6ef1415266b8"
+      },
+      "source": [
+        "# np.full() 를 통한 ndarray 생성\n",
+        "arr = np.full((3,4),77)\n",
+        "print('\\n Create ndarray by np.full()')\n",
+        "printinfo(arr)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            " Create ndarray by np.full()\n",
+            "[[77 77 77 77]\n",
+            " [77 77 77 77]\n",
+            " [77 77 77 77]]\n",
+            "shape: (3, 4), size: 12, dtype: int64, dimension: 2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aWz0AA5mXo_j"
+      },
+      "source": [
+        "#### NumPy.empty()\n",
+        "\n",
+        "np.empty(shape)\n",
+        "- 초기화되지 않은 상태로 지정된 shape만큼의 ndarray 생성\n",
+        "- 요소의 초기화 과정이 없어 배열 생성 비용이 가장 빠르고 저렴함\n",
+        "- 생성된 배열의 각 요소는 임의의 값이 저장되어 있음"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yviF3_KfXkWq",
+        "outputId": "674a4bd1-3a69-414c-a8af-142b26543e44"
+      },
+      "source": [
+        "arr = np.empty((2,2))\n",
+        "print('\\n Create ndarray by np.empty()')\n",
+        "printinfo(arr)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            " Create ndarray by np.empty()\n",
+            "[[5.e-324 5.e-324]\n",
+            " [5.e-324 0.e+000]]\n",
+            "shape: (2, 2), size: 4, dtype: float64, dimension: 2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2531vhxPX4XW"
+      },
+      "source": [
+        "#### *_like 함수\n",
+        "\n",
+        "지정된 배열과 shape이 같은 ndarray를 생성하는 *_like 함수\n",
+        "\n",
+        "- np.zeros_like()\n",
+        "- np.ones_like()\n",
+        "- np.full_like()\n",
+        "- np.empty_like()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VAQbkMT9YEnx"
+      },
+      "source": [
+        "#### 샘플 데이터 생성\n",
+        "\n",
+        "지정된 배열과 shape이 같은 ndarray를 생성하는 *_like 함수"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SEUxM_VUX2_C",
+        "outputId": "1e74d46e-d824-43da-c9c5-189caac6a99c"
+      },
+      "source": [
+        "# sample 데이터 생성\n",
+        "data =  [[1,2,3],[4,5,6]]\n",
+        "sample = np.array(data)\n",
+        "print('\\n Sample')\n",
+        "printinfo(sample)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            " Sample\n",
+            "[[1 2 3]\n",
+            " [4 5 6]]\n",
+            "shape: (2, 3), size: 6, dtype: int64, dimension: 2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G7QU95NSYTSq"
+      },
+      "source": [
+        "#### Numpy.ones_like()\n",
+        "\n",
+        "지정된 배열과 shape이 같은 ndarray를 생성하는 *_like 함수"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UvldHL8CYQdV",
+        "outputId": "8b170392-cec6-40c3-a4e9-f35fd7a1effc"
+      },
+      "source": [
+        "# ones_like()를 통한 ndarray 생성\n",
+        "one_array = np.ones_like(sample)\n",
+        "print('\\n Create ndarray by np.ones_like()')\n",
+        "printinfo(one_array)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            " Create ndarray by np.ones_like()\n",
+            "[[1 1 1]\n",
+            " [1 1 1]]\n",
+            "shape: (2, 3), size: 6, dtype: int64, dimension: 2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AvDbjHM3YkpW"
+      },
+      "source": [
+        "#### Summary\n",
+        "- np.arange()\n",
+        "- np.zeros()\n",
+        "- np.ones()\n",
+        "- np.full()\n",
+        "- np.empty()\n",
+        "- np.*_like()\n",
+        "- ..."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0QOCF6E0Yi6a"
       },
       "source": [
         ""
