Colaboratory를 통해 생성됨 - NumPy의 데이터 타입

--- a/Class3.ipynb
+++ b/Class3.ipynb
@@ -6,7 +6,7 @@
       "name": "Class3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPxKlJczbKKCd/HoxIL1Dyo",
+      "authorship_tag": "ABX9TyMseq34+bJu/zSCcrSzLAL0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1082,9 +1082,196 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GKBuQJ8iZGyl"
+      },
+      "source": [
+        "### NumPy 의 데이터 타입"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1dOQG2HsZKxu"
+      },
+      "source": [
+        "#### NumPy 의 데이터 타입\n",
+        "\n",
+        "- np.int64 : (64비트) 정수\n",
+        "- np.float64 : (64비트) 실수\n",
+        "- np.complex : 복소수\n",
+        "- np.bool : 불리언(True, False)\n",
+        "- np.object : 파이썬 객체\n",
+        "- np.str : 문자열"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "64XKH0FeZu6c"
+      },
+      "source": [
+        "#### 정수형(Integer) 데이터 타입\n",
+        "- numpy.int는 음수와 양수를 표현하는 정수형 데이터 타입\n",
+        "- 뒤에 오는 숫자는 bit 의 개수를 의미함 (int8 -> 2^8 = 256 개 만큼의 정수의 표현이 가능)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Md8l5TDUZ7EN"
+      },
+      "source": [
+        "#### 데이터 타입의 변경\n",
+        "\n",
+        "방법1) ndarray 생성시 인자로 dtype 지정하는 방식"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "0QOCF6E0Yi6a"
+      },
+      "source": [
+        "# 3차원 ndarray 생성\n",
+        "data = [[[1,2,3],[4,5,6]],[[3,2,1],[4,5,6]]]\n",
+        "arr = np.array(data, dtype=float)"
+      ],
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qd2a_JrsaLNB",
+        "outputId": "f272c0d6-0b2c-4983-fa31-2090c9012b93"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "#dtype 인자 지정을 통한 데이터 타입 변경\n",
+        "data = [1,2,3]\n",
+        "cpx_arr = np.array(data,dtype=np.complex)\n",
+        "str_arr = np.array(data,dtype=np.str)\n",
+        "\n",
+        "print('Complex: ', cpx_arr)\n",
+        "print('String: ', str_arr)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Complex:  [1.+0.j 2.+0.j 3.+0.j]\n",
+            "String:  ['1' '2' '3']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TQXGgDOhaeYo"
+      },
+      "source": [
+        "방법2) ndarray.astype(dtype)\n",
+        "- ndarray에 저장된 데이터를 주어진 dtype으로 변환해서 반환함\n",
+        "- Paramters : \n",
+        "  - dtype : 변경하고자 하는 배열의 데이터 타입"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "snY8vJHBanaL"
+      },
+      "source": [
+        "#### 샘플 데이터 생성"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GbN8Zt_vadRv",
+        "outputId": "fb227c09-af9a-477e-c864-911f1ceea233"
+      },
+      "source": [
+        "# 샘플 데이터 생성\n",
+        "origin = np.arange(1, 2, 0.2)\n",
+        "print('\\nOriginal data')\n",
+        "print(origin)\n",
+        "print('dtype: ', origin.dtype)"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Original data\n",
+            "[1.  1.2 1.4 1.6 1.8]\n",
+            "dtype:  float64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5yfLcV7Uax9g"
+      },
+      "source": [
+        "#### .astype() 을 통한 데이터 타입 변경\n",
+        "- astype() 을 활용한 데이터 타입 변경"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jidmF1yDawzx",
+        "outputId": "30daaa54-236c-4c07-e026-2fe28447baf5"
+      },
+      "source": [
+        "# astype(dtype)을 활용한 데이터 타입 변경\n",
+        "result = origin.astype(int)\n",
+        "print('\\nResult of astype(int)')\n",
+        "print(result)\n",
+        "\n",
+        "print('\\nOriginal data')\n",
+        "print(origin)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Result of astype(int)\n",
+            "[1 1 1 1 1]\n",
+            "\n",
+            "Original data\n",
+            "[1.  1.2 1.4 1.6 1.8]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "39zFCxfMbBF0"
       },
       "source": [
         ""
