Colaboratory를 통해 생성됨 - Ndarray의 reshape

--- a/Class3.ipynb
+++ b/Class3.ipynb
@@ -6,7 +6,7 @@
       "name": "Class3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMseq34+bJu/zSCcrSzLAL0",
+      "authorship_tag": "ABX9TyMQt32HbOP8qRC+9456lQEx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1269,9 +1269,209 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C8OXtpJ4bO-m"
+      },
+      "source": [
+        "### Ndarray의 reshape"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kEh-yZn9bTsb"
+      },
+      "source": [
+        "#### ndarray.shape\n",
+        "\n",
+        "#### shape의 변경 사례\n",
+        "\n",
+        "사례1) 이미지 데이터를 딥러닝에 적용시\n",
+        "\n",
+        "사례2) 머신러닝 알고리즘 적용을 위해 특정 독립변수 컬럼을 선택하여 1차원을 2차원으로 변경하기도 함"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-eI75moubljZ"
+      },
+      "source": [
+        "#### np.reshape()\n",
+        "\n",
+        "np.reshape(array, newshape)\n",
+        "- 기본 데이터는 유지하면서 차원과 shape만을 바꾼 배열을 반환\n",
+        "- Paramter:\n",
+        "  - array : reshape할 ndarray\n",
+        "  - newshape : 변경하고자 하는 shape값(튜플형태)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "39zFCxfMbBF0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "39zFCxfMbBF0",
+        "outputId": "f33514a8-1ea3-4e0b-c67d-89e655f1be0d"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# ndarray 속성 출력 함수\n",
+        "def printinfo(arr):\n",
+        "  print(arr)\n",
+        "  print(\"shape: {}, size: {}, dtype: {}, dimension: {}\".format(arr.shape, arr.size, arr.dtype, arr.ndim))\n",
+        "\n",
+        "# 샘플 데이터 생성\n",
+        "origin_arr = np.arange(15)\n",
+        "print('\\nOriginal ndarray')\n",
+        "printinfo(origin_arr)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Original ndarray\n",
+            "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
+            "shape: (15,), size: 15, dtype: int64, dimension: 1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d22hZxZXcOKm"
+      },
+      "source": [
+        "- np.reshape()를 통해 2차원 배열로 변경하기"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KqhoJBmPcI4z",
+        "outputId": "0b29350a-a8c8-4bb3-cf99-7ff807d070b9"
+      },
+      "source": [
+        "# reshape() 을 활용한 데이터 향상 변경\n",
+        "\n",
+        "#reshape_arr = np.reshape(origin_arr, (3,6))\n",
+        "reshape_arr = np.reshape(origin_arr, (3,5))\n",
+        "print('\\nReshape ndarray')\n",
+        "printinfo(reshape_arr)"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Reshape ndarray\n",
+            "[[ 0  1  2  3  4]\n",
+            " [ 5  6  7  8  9]\n",
+            " [10 11 12 13 14]]\n",
+            "shape: (3, 5), size: 15, dtype: int64, dimension: 2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UWLz3mKyczKV"
+      },
+      "source": [
+        "#### numpy.reshape()\n",
+        "\n",
+        "np.reshape(array, newshape)\n",
+        "- 기존 데이터는 유지하면서 차원과 shape만을 바꾼 배열을 반환\n",
+        "- 호출방식(결과는 동일)\n",
+        "\n",
+        "  1) np.reshape(origin_arr, (3,5))\n",
+        "\n",
+        "  2) origin_arr.reshape((3,5))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rfyE0upmdCXh"
+      },
+      "source": [
+        "#### numpy.reshape(-1, N)\n",
+        "\n",
+        "reshape(-1, N)\n",
+        "- 기존 데이터는 유지하면서 , shape을 변경하는 방식\n",
+        "- shape은 주어진 N에 따라 자동으로 추정되어 변경됨\n",
+        "- -1의 자리는 가변적이 됨"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LyQY2ggPdh1l"
+      },
+      "source": [
+        "- Original ndarray를 1차원에서 2차원으로 변경하기"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dXBtLEm3cZnI",
+        "outputId": "4ae7aa9d-49a0-4fa1-c245-1a4d7480c0eb"
+      },
+      "source": [
+        "# origin_arr에 저장된 데이터를 2차원으로 항상 변경\n",
+        "reshape_arr = origin_arr.reshape(-1,1)\n",
+        "print('\\nReshape(-1,N) to 2D array')\n",
+        "printinfo(reshape_arr)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Reshape(-1,N) to 2D array\n",
+            "[[ 0]\n",
+            " [ 1]\n",
+            " [ 2]\n",
+            " [ 3]\n",
+            " [ 4]\n",
+            " [ 5]\n",
+            " [ 6]\n",
+            " [ 7]\n",
+            " [ 8]\n",
+            " [ 9]\n",
+            " [10]\n",
+            " [11]\n",
+            " [12]\n",
+            " [13]\n",
+            " [14]]\n",
+            "shape: (15, 1), size: 15, dtype: int64, dimension: 2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WD_9FS6kdgrj"
       },
       "source": [
         ""
