Colaboratory를 통해 생성됨 - NumPy 집계 함수

--- a/Class3.ipynb
+++ b/Class3.ipynb
@@ -6,7 +6,7 @@
       "name": "Class3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOC6xxUU/inyEpPhc+e6EoO",
+      "authorship_tag": "ABX9TyPR9feK9c+6UyApf6Cr2XH4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2611,20 +2611,244 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "dKdsEWw-wS1P"
+        "id": "dvQ-Bl4YwjlK"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "### NumPy 집계 함수"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "L49GlozMwmJN"
+      },
+      "source": [
+        "#### NumPy 의 집계 함수\n",
+        "- 집계 함수(Aggregate Functions)란?\n",
+        "  - 데이터를 종합하여 특정 연산을 적용하는 함수들을 총칭"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XHA4CHFow_Hf"
+      },
+      "source": [
+        "- 합계 : sum()\n",
+        "- 최소값 : min()\n",
+        "- 최대값 : max()\n",
+        "- 누적합계 : cumsum()\n",
+        "- 평균 : mean()\n",
+        "- 중앙값: median()\n",
+        "- 상관계수 : corrcoef()\n",
+        "- 표준편차 : std()\n",
+        "- 고유값 : unique()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pkqEYduLxRL9"
+      },
+      "source": [
+        "#### 데이터의 집계 방향\n",
+        "- 집계 함수의 기능 이해와 사용법은 매우 단순함\n",
+        "  - 방법 (1)\n",
+        "  array.sum()\n",
+        "  - 방법 (2)\n",
+        "  np.sum(array)\n",
+        "\n",
+        "- 중요한 것은 데이터의 집계 방향을 지정해야함\n",
+        "  - axis = None(default)\n",
+        "  - axis = 0\n",
+        "  - axis = 1"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9WVwj-qdwcNP"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dKdsEWw-wS1P",
+        "outputId": "14091b66-b928-446c-c72d-b1ed5dd50d75"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# 샘플 데이터 생성\n",
+        "sample = np.arange(1, 10).reshape(3,3)\n",
+        "print('Sample')\n",
+        "print(sample)"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Sample\n",
+            "[[1 2 3]\n",
+            " [4 5 6]\n",
+            " [7 8 9]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Tc2eW2y4xuHG"
+      },
+      "source": [
+        "#### 데이터의 집계 방향(axis=None)\n",
+        "axis = None(default)\n",
+        "- 대상 ndarray의 모든 요소가 연산 대상이 됨\n",
+        "- Default 값이므로 집계 함수 호출시 생략 가능"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9WVwj-qdwcNP",
+        "outputId": "1ac38f9a-9c26-4e34-8efb-3fb53f52b274"
+      },
+      "source": [
+        "# axis = None 실습 (default)\n",
+        "print('\\n[Case-1]axis = None')\n",
+        "print('sum : ', sample.sum())\n",
+        "print('mean : ', sample.mean())\n",
+        "print('std : ', sample.std())\n",
+        "print('max : ', sample.max())\n",
+        "print('min : ', sample.min())"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[Case-1]axis = None\n",
+            "sum :  45\n",
+            "mean :  5.0\n",
+            "std :  2.581988897471611\n",
+            "max :  9\n",
+            "min :  1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "71YS18MZyKa1"
+      },
+      "source": [
+        "#### 데이터의 집계 방향 (axis = 0)\n",
+        "axis = 0\n",
+        "- 열을 기준으로 동일 인덱스의 요소를 그룹으로 연산함"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SGzjSsq1yIov",
+        "outputId": "ef13be4a-3c2d-4546-c632-efb4e8ca0be1"
+      },
+      "source": [
+        "# axis = 0 실습\n",
+        "print('\\n[Case-2]axis = 0')\n",
+        "print('sum : ', sample.sum(axis = 0))\n",
+        "print('mean : ', sample.mean(axis = 0))\n",
+        "print('std : ', sample.std(axis = 0))\n",
+        "print('max : ', sample.max(axis = 0))\n",
+        "print('min : ', sample.min(axis = 0))"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[Case-2]axis = 0\n",
+            "sum :  [12 15 18]\n",
+            "mean :  [4. 5. 6.]\n",
+            "std :  [2.44948974 2.44948974 2.44948974]\n",
+            "max :  [7 8 9]\n",
+            "min :  [1 2 3]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qP_ye1ACyZCl"
+      },
+      "source": [
+        "#### 데이터의 집계 방향 (axis = 1)\n",
+        "axis = 1\n",
+        "- 행을 기준으로 동일 인덱스의 요소를 그룹으로 연산함"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A_oLS_G0yXUM",
+        "outputId": "08ed9696-b803-4499-91be-1977033e275a"
+      },
+      "source": [
+        "# axis = 1 실습 (default)\n",
+        "print('\\n[Case-3]axis = 1')\n",
+        "print('sum : ', sample.sum(axis = 1))\n",
+        "print('mean : ', sample.mean(axis = 1))\n",
+        "print('std : ', sample.std(axis = 1))\n",
+        "print('max : ', sample.max(axis = 1))\n",
+        "print('min : ', sample.min(axis = 1))"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[Case-3]axis = 1\n",
+            "sum :  [ 6 15 24]\n",
+            "mean :  [2. 5. 8.]\n",
+            "std :  [0.81649658 0.81649658 0.81649658]\n",
+            "max :  [3 6 9]\n",
+            "min :  [1 4 7]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JsSFBlSFynUJ"
+      },
+      "source": [
+        "#### 데이터의 집계 방향이 왜 중요할까?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Eb_E9fQ6yhsp"
       },
       "source": [
         ""
