--- a/Class3.ipynb
+++ b/Class3.ipynb
@@ -6,7 +6,7 @@
       "name": "Class3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPR9feK9c+6UyApf6Cr2XH4",
+      "authorship_tag": "ABX9TyOgZo5XgPdMDl3OAiJNhNHt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2846,9 +2846,344 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "21PNgOMQy66M"
+      },
+      "source": [
+        "### 데이터 정렬"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "Eb_E9fQ6yhsp"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Eb_E9fQ6yhsp",
+        "outputId": "3344d986-040c-4331-dc7b-ade16f13498d"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# 샘플 데이터 생성\n",
+        "sample = np.array([2,5,8,1])\n",
+        "print('1D-Array Sample')\n",
+        "print(sample)"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1D-Array Sample\n",
+            "[2 5 8 1]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "e0TV1faezDwT"
+      },
+      "source": [
+        "#### NumPy 의 정렬\n",
+        "np.sort(array)\n",
+        "- 기본적으로 오름차순 정렬만 지원함\n",
+        "- 정렬된 결과를 반환하지만, 원본 데이터는 변경하지 않음\n",
+        "\n",
+        "- 원본 데이터를 변경하려면?\n",
+        "  - ndarray.sort(): 원본 데이터를 변경하고 none값을 반환"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zeYT3K6ezCws",
+        "outputId": "d6e09156-24a5-44fd-96fd-f1b055ebe54f"
+      },
+      "source": [
+        "#np.sort() 정렬\n",
+        "\n",
+        "result = np.sort(sample)\n",
+        "print('\\nResult of np.sort')\n",
+        "print('Result : ', result)\n",
+        "print('Original : ', sample)"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Result of np.sort\n",
+            "Result :  [1 2 5 8]\n",
+            "Original :  [2 5 8 1]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zJpGHrJHzVXz"
+      },
+      "source": [
+        "#### NumPy의 내림차순 정렬\n",
+        "\n",
+        "1. np.sort()를 통해 오름차순 정렬하여 저장\n",
+        "2. 오름차순 정렬된 배열을 역순으로 출력 : sample[::-1]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WidkYzPozS75",
+        "outputId": "30b9f21c-89d5-4910-9183-db291af49ca1"
+      },
+      "source": [
+        "# [::-1] 실습\n",
+        "print('\\nTest[::-1] ')\n",
+        "print('Original :', sample)\n",
+        "print('Result :', sample[::-1])"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Test[::-1] \n",
+            "Original : [2 5 8 1]\n",
+            "Result : [1 8 5 2]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3ZpTZqYZz6Q_",
+        "outputId": "5895b964-fad3-44ba-bcda-c9ab5ca3716d"
+      },
+      "source": [
+        "# 내림차순 정렬\n",
+        "sort_arr = np.sort(sample)\n",
+        "result = sort_arr[::-1]\n",
+        "print('\\nDescending Order')\n",
+        "print('Descending :', result)"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Descending Order\n",
+            "Descending : [8 5 2 1]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NXOtLJ9o0WxW"
+      },
+      "source": [
+        "#### 2차원 ndarray 정렬\n",
+        "np.sort(array, axis)\n",
+        "- 기본적으로 오름차순 정렬만 지원함\n",
+        "- 정렬된 결과를 반환하지만, 원본 데이터는 변경하지 않음\n",
+        "- 2차원 데이터의 정렬 시에는 axis를 통해 집계 방향 결정됨"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Sht__SgK0Stk",
+        "outputId": "d7b2c114-93ff-4aa7-9f72-1cbaf39b08fa"
+      },
+      "source": [
+        "# 샘플 데이터 생성\n",
+        "\n",
+        "sample = np.array([[9,11],[5,1]])\n",
+        "print('\\n2D-Array Sample')\n",
+        "print(sample)"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "2D-Array Sample\n",
+            "[[ 9 11]\n",
+            " [ 5  1]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7YmpKXTe0p6N",
+        "outputId": "41217b8c-31d6-4da9-b0d9-c25431ffb9f1"
+      },
+      "source": [
+        "# 2차원 배열 정렬 by axis = 0\n",
+        "\n",
+        "result = np.sort(sample, axis = 0)\n",
+        "print('\\nnp.sort(axis = 0) :')\n",
+        "print(result)"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "np.sort(axis = 0) :\n",
+            "[[ 5  1]\n",
+            " [ 9 11]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oRq8ibu70zcn",
+        "outputId": "5fa866cc-7061-4198-e523-44fa708c8e6b"
+      },
+      "source": [
+        "# 2차원 배열 정렬 by axis = 1\n",
+        "\n",
+        "result = np.sort(sample, axis = 1)\n",
+        "print('\\nnp.sort(axis=1) :')\n",
+        "print(result)"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "np.sort(axis=1) :\n",
+            "[[ 9 11]\n",
+            " [ 1  5]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "V2QxhDTj1LYV"
+      },
+      "source": [
+        "#### np.argsort()\n",
+        "np.argsort(array)\n",
+        "- 오름차순 정렬된 배열의 인덱스 값만 반환하는 함수"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mbFaHVIo1JrK"
+      },
+      "source": [
+        "# 샘플 데이터 생성\n",
+        "\n",
+        "name = np.array(['John', 'Samuel', 'Kate', 'Mike', 'Sarah'])\n",
+        "score = np.array([78,84,96,88,82])"
+      ],
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZlV5Ju-o1bQh",
+        "outputId": "6aab91dc-c645-456a-b24a-04d0f27dba3f"
+      },
+      "source": [
+        "# np.argsort()를 통해 정렬된 인덱스 값만 반환\n",
+        "\n",
+        "sort_indexes = np.argsort(score)\n",
+        "print('\\nnp.argsort()')\n",
+        "print('sort indexes :', sort_indexes)"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "np.argsort()\n",
+            "sort indexes : [0 4 1 3 2]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WKOkyTS-1oEU",
+        "outputId": "76078c09-f641-487e-abe4-8f0256cea02d"
+      },
+      "source": [
+        "# 인덱스 값을 통해 컬럼명 조회\n",
+        "print('sort values :', name[sort_indexes])"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "sort values : ['John' 'Sarah' 'Samuel' 'Mike' 'Kate']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gwfT1IkZ1vWj"
       },
       "source": [
         ""
