Colaboratory를 통해 생성됨 - NumPy 축 이해하기

--- a/Class3.ipynb
+++ b/Class3.ipynb
@@ -6,7 +6,7 @@
       "name": "Class3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOgZo5XgPdMDl3OAiJNhNHt",
+      "authorship_tag": "ABX9TyOIdxPZZo+ggHd6ao7qMGsw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3181,9 +3181,125 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KMpn7F_32EOp"
+      },
+      "source": [
+        "### NumPy 축 이해하기"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fhfVLgLT2Os8"
+      },
+      "source": [
+        "#### npsum 과 axis 의 관계"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "gwfT1IkZ1vWj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gwfT1IkZ1vWj",
+        "outputId": "98d9b61c-842a-40c8-a46f-93fb66554311"
+      },
+      "source": [
+        "import numpy as np\n",
+        "x = np.arange(0, 4*2*3)\n",
+        "x = x.reshape(4,2,3)\n",
+        "print(x)"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[[ 0  1  2]\n",
+            "  [ 3  4  5]]\n",
+            "\n",
+            " [[ 6  7  8]\n",
+            "  [ 9 10 11]]\n",
+            "\n",
+            " [[12 13 14]\n",
+            "  [15 16 17]]\n",
+            "\n",
+            " [[18 19 20]\n",
+            "  [21 22 23]]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RtKvMI-_2XDO",
+        "outputId": "148d539b-ecce-41fc-9610-a7df8f4cc132"
+      },
+      "source": [
+        "axis_0 = x.sum(axis = 0)\n",
+        "print(axis_0)"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[36 40 44]\n",
+            " [48 52 56]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "umAQ3OJN2f56",
+        "outputId": "edb79fc5-1016-4184-a117-a16df864afd4"
+      },
+      "source": [
+        "print(axis_0.shape)"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(2, 3)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XwaUGJWn2kF0"
+      },
+      "source": [
+        "#### npsum 과 axis 의 관계 (axis = 0)\n",
+        "#### npsum 과 axis 의 관계 (axis = 1)\n",
+        "#### npsum 과 axis 의 관계 (axis = 2)\n",
+        "\n",
+        "1. 연속된 [의 개수로 쉽게 차원을 알 수 있습니다. \n",
+        "2. 다음과 같이 구조화 되는 것을 알 수 있습니다. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wFU6stk82iRE"
       },
       "source": [
         ""
